fix form styling on mobile

--- a/src/styles/user/Forms.css
+++ b/src/styles/user/Forms.css
@@ -1,4 +1,5 @@
 .register-form, .login-form {
+    max-width: 95%;;
     background-color: var(--form-background);
     margin-left: auto;
     margin-right: auto;
